top padding in first section to prevent content from overlaping with header

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -70,5 +70,7 @@ section{
 }
 
 main>section:first-of-type{
+  box-sizing: border-box;
   top: -(vars.$header-unpinned-height);
+  padding-top: vars.$header-unpinned-height;
 }
